--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -17,7 +17,14 @@ html {
   height: 100%;
 }
 
-h1,
+h1 {
+  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  color: #42DCA3;
+  margin: 0 0 35px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
 h2,
 h3,
 h4,
