--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -20,7 +20,7 @@ html {
 h1 {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
-  color: $primary;
+  color: #42DCA3;
   margin: 0 0 35px;
   letter-spacing: 1px;
   text-transform: uppercase;
