--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -206,7 +206,7 @@ a {
 
 .portfolio-section {
   color: white;
-  background: url('../img/downloads-bg.jpg') no-repeat center center scroll;
+  background: url('../img/portfolio-bg.jpg') no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -299,3 +299,4 @@ img::selection {
 img::-moz-selection {
   background: transparent;
 }
+
