--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -206,7 +206,7 @@ a {
 
 .portfolio-section {
   color: white;
-  background: url('../img/portfolio-bg.jpg') no-repeat center center scroll;
+  background: url('../img/portfolio-bg.png') no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
